Fix quicklinks layout issues

--- a/src/override.css
+++ b/src/override.css
@@ -24,12 +24,16 @@ body {
 
 .quick-links {
     position: relative;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
 }
 
 .links-content {
     display: none;
     position: absolute;
+    top: 20px;
     background-color: var(--surface);
     min-width: 160px;
     padding: 12px 16px;
@@ -39,9 +43,7 @@ body {
 
 .link-title {
     color: var(--onSurface);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-self: center;
 }
 
 .quick-links:hover .links-content  {
